--- a/frontend/src/app/property/property-list/property-list.component.html
+++ b/frontend/src/app/property/property-list/property-list.component.html
@@ -1,1 +1,6 @@
-<p>property-list works!</p>
+<div class="row">
+  <div class="shadow-lg col-sm-4 p-3">
+    <app-property-card></app-property-card>
+    <!-- this enables the html and css to be applied to the array in property-list.component.ts -->
+  </div>
+</div>
