--- a/frontend/src/app/property/property-card/property-card.component.html
+++ b/frontend/src/app/property/property-card/property-card.component.html
@@ -1,10 +1,20 @@
-    <div class="card">
-      <img class="propImg" src="assets/images/house_default.jpg" /> 
-      <div class="card-body p-2">
-        <h1>{{ Property.Name }}</h1>
-        <h2>{{ Property.Type }}</h2>
-        <h3>{{ Property.Price }}</h3>
-      </div>
+<div class="card">
+  <div class="card-img-wrapper">
+    <img class="card-img-top" src="assets/images/house_default.png" />
+
+    <ul class='list-inline  text-center  member-icons  animate'>
+      <li class='list-inline-item'>
+        <button class="btn btn-primary"><i class="far fa-edit"></i></button>
+      </li>
+
+      <li class='list-inline-item'>
+        <button class="btn btn-primary"><i class="far fa-address-book"></i></button></li>
+    </ul>
+
+    <div class="card-body p-2">
+      <h1>{{ property.Name }}</h1>
+      <h2>{{ property.Type }}</h2>
+      <h3>{{ property.Price }}</h3>
     </div>
   </div>
 </div>
