--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -10,9 +10,13 @@
         <a class="nav-link" href="/">Buy <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/">Sell</a>
+        <a class="nav-link" href="/">Rent</a>
       </li>
-      
+
+      <li class="nav-item">
+        <a class="nav-link" href="/">List Property (Free)</a>
+      </li>
+
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
