--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,5 +2,6 @@
 
 <div class='container'  style='margin-top: 70px;'>
 
-<app-property-list></app-property-list>
+<!--<app-property-list></app-property-list>-->
+<router-outlet></router-outlet>
 </div>
