--- a/frontend/src/app/property/property-card/property-card.component.html
+++ b/frontend/src/app/property/property-card/property-card.component.html
@@ -2,13 +2,21 @@
   <div class="card-img-wrapper">
     <img class="card-img-top" src="assets/images/house_default.png" />
 
-    <ul class='list-inline  text-center  member-icons  animate'>
-      <li class='list-inline-item'>
-        <button class="btn btn-primary" routerLink='/property-detail'><i class="far fa-edit"></i></button>
+    <ul class="list-inline text-center member-icons animate">
+      <li class="list-inline-item">
+        <button
+          class="btn btn-primary"
+          routerLink="/property-detail/{{ property.Id }}"
+        >
+          <i class="far fa-edit"></i>
+        </button>
       </li>
 
-      <li class='list-inline-item'>
-        <button class="btn btn-primary"><i class="far fa-address-book"></i></button></li>
+      <li class="list-inline-item">
+        <button class="btn btn-primary">
+          <i class="far fa-address-book"></i>
+        </button>
+      </li>
     </ul>
 
     <div class="card-body p-2">
