--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,29 +1,57 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <a class="navbar-brand" routerLink="/">HSPA</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" [routerLinkActiveOptions]= "{exact:true}"  routerLinkActive="active"  routerLink="/">Buy <span class="sr-only">(current)</span></a>
+        <a
+          class="nav-link"
+          [routerLinkActiveOptions]="{ exact: true }"
+          routerLinkActive="active"
+          routerLink="/"
+          >Buy <span class="sr-only">(current)</span></a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link"  routerLinkActive="active" routerLink="/rent-property">Rent</a>
+        <a
+          class="nav-link"
+          routerLinkActive="active"
+          routerLink="/rent-property"
+          >Rent</a
+        >
       </li>
 
       <li class="nav-item">
-        <a class="nav-link"  routerLinkActive="active" routerLink="/add-property">List Property (Free)</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/add-property"
+          >List Property (Free)</a
+        >
       </li>
 
-     <!-- <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link disabled" routerLink="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li> -->
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <input
+        class="form-control mr-sm-2"
+        type="search"
+        placeholder="Search"
+        aria-label="Search"
+      />
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+        Search
+      </button>
     </form>
   </div>
 </nav>
