--- a/frontend/src/app/property/add-property/add-property.component.html
+++ b/frontend/src/app/property/add-property/add-property.component.html
@@ -1,4 +1,4 @@
 <p>
   add-property works!
-  <button class="btn btn-primary">Back</button>
+  <button (click)= 'onBack()'  class="btn btn-primary">Back</button>
 </p>
