--- a/frontend/src/app/property/property-card/property-card.component.html
+++ b/frontend/src/app/property/property-card/property-card.component.html
@@ -3,14 +3,12 @@
     <img class="card-img-top" src="assets/images/house_default.png" />
 
     <ul class="list-inline text-center member-icons animate">
+
       <li class="list-inline-item">
-        <button
-          class="btn btn-primary"
-          routerLink="/property-detail/{{ property.Id }}"
-        >
-          <i class="far fa-edit"></i>
-        </button>
+        <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i
+            class="far fa-edit"></i></button>
       </li>
+
 
       <li class="list-inline-item">
         <button class="btn btn-primary">
