--- a/frontend/src/app/property/property-card/property-card.component.html
+++ b/frontend/src/app/property/property-card/property-card.component.html
@@ -5,10 +5,8 @@
     <ul class="list-inline text-center member-icons animate">
 
       <li class="list-inline-item">
-        <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i
-            class="far fa-edit"></i></button>
+        <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="far fa-edit"></i></button>
       </li>
-
 
       <li class="list-inline-item">
         <button class="btn btn-primary">
